# tonescript-generator

./: README.md  README_Ru.md  pyproject.toml
src/tonescript_generator/: __init__.py  cli.py  core.py  tester.py
